<resources>
    <string name="app_name" translatable="false">Paperless</string>
    <string name="login">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="email">Usuario</string>
    <string name="sufijoEmail">\@aeromexico.com</string>
    <string name="inspeccion_de_aeronave">Inspección \nde Aeronave</string>
    <string name="inspeccion_de_aeronave_form">Inspección de Aeronave</string>
    <string name="mensajes_operacionales">Mensajes Operacionales</string>
    <string name="mensajes_operacionales_menu">Mensajes\nOperacionales</string>
    <string name="menu">Menú</string>
    <string name="origen">Origen</string>
    <string name="matricula">Matrícula: </string>
    <string name="etd" translatable="false">ETD: </string>
    <string name="destino">Destino</string>
    <string name="Equipment">Equipo</string>
    <string name="eta" translatable="false">ETA: </string>
    <string name="numero_de_vuelo">Número de vuelo</string>
    <string name="fecha_de_vuelo">Fecha de vuelo</string>
    <string name="ruta">Ruta</string>
    <string name="selecciona">Selecciona</string>
    <string name="buscar">Buscar</string>
    <string name="buscar_un_vuelo">Buscar un vuelo</string>
    <string name="tvConDaño">Con daño</string>
    <string name="checkRadomo">Radomo</string>
    <string name="tvSeccionCarga">Marco de compartimento</string>
    <string name="checkCompCargaDelantero">Área compartimento de carga delantero</string>
    <string name="checkCompCargaTrasero">Área compartimento de carga trasero</string>
    <string name="checkCompCargaBulk">Área compartimento bulk</string>
    <string name="tvSeccionInterior">Interior</string>
    <string name="checkCompIntDelantero">Interior de compartimento de carga delantero</string>
    <string name="checkCompIntTrasero">Interior de compartimento de carga trasero</string>
    <string name="checkCompIntBulk">Compartimento bulk</string>
    <string name="tvSeccionSemiala">Semiala</string>
    <string name="checkSemialaIzq">Semiala izquierda</string>
    <string name="checkSemialaDer">Semiala derecha</string>
    <string name="tvSeccionAreas">Áreas</string>
    <string name="checkAguaPotable">Área de servicio de agua potable</string>
    <string name="checkAguaNegra">Área de servicio de agua negra</string>
    <string name="checkPuertaPrincipal">Área puerta principal</string>
    <string name="checkServicioTrasera">Área de servicio trasera</string>
    <string name="tvSeccioncompartimentos">Compartimentos</string>
    <string name="checkSepDosIn">¿La estiba excede las 2 pulgadas de separación con el techo del compartimento?</string>
    <string name="checkColocacionRedes">Se verificó la colocación de redes y/o seguros en compartimentos</string>
    <string name="hintNotaDaño">Descripción del daño</string>
    <string name="btnTomarFoto">Agregar foto  </string>
    <string name="btnReintentarFoto">Reintentar foto  </string>
    <string name="msg_exito_inspeccion_aeronave">El reporte de inspección de aeronave se ha enviado de forma exitosa</string>
    <string name="exito">Éxito</string>
    <string name="parametros">Parámetros</string>
    <string name="requerido">Requerido</string>
    <string name="pendientes">Pendientes</string>
    <string name="label_iniciar_sesion">Iniciar sesión</string>
    <string name="label_olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="error_campo_invalido">Campo Inválido</string>
    <string name="informacion_de_vuelo">Información de vuelo</string>
    <string name="inspeccion_de_equipo">Checklist\nde equipo</string>
    <string name="lectura_de_credenciales">Lectura de credenciales</string>
    <string name="operador">Operador</string>
    <string name="escanea_c_digo_de_barras_credencial_de_empleado">Escanea código de barras credencial del empleado</string>
    <string name="no_de_empleado">No. de empleado</string>
    <string name="nombre_del_recurso_autom_tico">Nombre del recurso (automático)</string>
    <string name="txt_supervisor">Supervisor</string>
    <string name="escanea_c_digo_qr_del_equipo">Escanea código QR del equipo</string>
    <string name="tittle_checklist_diario">Checklist equipo</string>
    <string name="text_tipo">Tipo:</string>
    <string name="text_no_econ_mico">No. Económico:</string>
    <string name="text_estaci_n">Estación</string>
    <string name="observaciones">Observaciones</string>
    <string name="foto">Foto</string>
    <string name="n_a" translatable="false">N/A</string>
    <string name="mal">Mal</string>
    <string name="bien">Bien</string>
    <string name="regresar">Regresar</string>
    <string name="continuar">Continuar</string>
    <string name="verificaci_n">Verificación</string>
    <string name="estado">Estado</string>
    <string name="informacion">Información</string>
    <string name="icon_aeromexico">Logo Aeromexico</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="empleado_incorrecto">Empleado incorrecto</string>
    <string name="reintentar_firma">Reintentar firma</string>
    <string name="credenciales">Credenciales</string>
    <string name="n_mero_de_empleado_operador">No. empleado: </string>
    <string name="nombre_del_operador">Nombre: </string>
    <string name="n_mero_de_empleado_supervisor">No. empleado: </string>
    <string name="nombre_del_supervisor">Nombre: </string>
    <string name="message_reporte_exitoso">El checklist de equipo diario se ha enviado de forma exitosa.</string>
    <string name="toolbar_title_first_flight">Primer vuelo</string>
    <string name="check_plane_firts_flying_day">Primer vuelo \ndel día</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manual_flight">Vuelo Manual</string>
    <string name="espere">Espere un momento</string>
    <string name="aceptar">Aceptar</string>
    <string name="cerrar">Cerrar</string>
    <string name="no_de_empleado_del_oficial_de_rampa">No. de empleado del Oficial de rampa</string>
    <string name="nombre_del_oficial_de_rampa">Nombre del oficial de rampa</string>
    <string name="buscar_empleado">Buscar empleado</string>
    <string name="firmar">Firmar</string>
    <string name="no_de_empleado_del_oficial_de_despacho">No. de empleado del Oficial de Despacho</string>
    <string name="nombre_del_oficial_de_despacho">Nombre del oficial de despacho</string>
    <string name="remarks" translatable="false">Remarks</string>
    <string name="enviar">Enviar</string>
    <string name="company">Compañia</string>
    <string name="flight">Vuelo:</string>
    <string name="select_company"><i>---</i></string>
    <string name="cargando">Cargando</string>
    <string name="el_mensaje_ya_ha_sido_firmado">El mensaje ya ha sido firmado</string>
    <string name="tvSeccionOtros">Adicionales</string>
    <string name="checkOtros">Otros</string>
    <string name="hintNombreOtro">Área que presenta el daño</string>
    <string name="cancel">Cancelar</string>
    <string name="busqueda_mnual">Busqueda manual</string>
    <string name="a_cabina_de_pilotos">Cabina de Pilotos</string>
    <string name="bien_mal">(Bien/Mal)</string>
    <string name="_1_piso_y_techo">1. Piso y techo</string>
    <string name="_2_debajo_de_asientos_de_pilotos">2. Debajo de asientos de Pilotos</string>
    <string name="_3_alojamientos_que_no_est_n_sellados">3. Alojamientos que no estén sellados</string>
    <string name="_4_repisa_antideslumbrante">4. Repisa antideslumbrante</string>
    <string name="consentimiento">Consentimiento</string>
    <string name="dsicrepacias_detectadas">Discrepancias detectadas</string>
    <string name="discrepacias_detectadas_aqui">Discrepancias detectadas aqui</string>
    <string name="nombre_del_oficial_de_operaciones">Nombre del oficial de operaciones</string>
    <string name="dialog_mal_selected">"Acciones para seguir en caso de identificar objetos sospechosos:
        \n1. No tocarlo.\n2. Recordar las características del objeto.\n3. Dejar una marca en el lugar donde se encontró el objeto."</string>
    <string name="primer_vuelo">Primer Vuelo</string>
    <string name="borrar_pendiente_pregunta">¿Borrar pendiente?</string>
    <string name="enviar_pendiente_pregunta">¿Enviar pendiente?</string>
    <string name="error_al_enviar_a_la_web">Error al enviar a la web</string>
    <string name="el_detalle_del_mensaje_se_ha_guardado_para_su_envio_posterior">El detalle del mensaje se ha guardado para su envío posterior</string>
    <string name="mensaje_enviado">Mensaje Enviado</string>
    <string name="el_mensaje_se_envio_con_exito">El mensaje se envió con éxito</string>
    <string-array name="modulosArray">
        <item>Mensajes Operacionales</item>
        <item>Inspección de Aeronave</item>
        <item>Primer Vuelo</item>
        <item>Checklist diario</item>
        <item>Deshielo</item>
        <item>Carga Combustible</item>
        <item>Notoc</item>
    </string-array>
    <string name="_1_puertas">1. Puertas</string>
    <string name="_2_piso_y_techo">2. Piso y techo</string>
    <string name="_3_bolsas_de_respaldos_y_debajo_de_n_asientosd_de_pasajeros">3. Bolsas de respaldos y debajo de\nasientos de pasajeros</string>
    <string name="_4_chaleco_salvavidas">4. Chaleco salvavidas</string>
    <string name="nombre_del_piloto">Nombre del piloto</string>
    <string name="discrepancias_detectadas">Discrepancias detectadas</string>
    <string name="discrepancias_detetctadas">Discrepancias detectadas</string>
    <string name="b_cabina_de_pasajeros">Cabina de pasajeros</string>
    <string name="_5_alojamientos_superiores_de_equipajes">5. Alojamientos superiores de equipajes</string>
    <string name="c_cocinas">Cocinas</string>
    <string name="d_ba_os">Baños</string>
    <string name="nombre_del_sobrecargo">No. de empleado Sobrecargo</string>
    <string name="folio">Folio:</string>
    <string name="firma_requerida">Firma requerida</string>
    <string name="empleado_requerido">Empleado requerido</string>
    <string name="empleado_rampa_requerido">Empleado rampa requerido</string>
    <string name="firma_despacho_requerida">Firma Despacho requerida</string>
    <string name="firma_rampa_requerida">Firma rampa requerida</string>
    <string name="empleado_despacho_requerido">Empleado despacho requerido</string>
    <string name="selecciona_un_mensaje_valido">Selecciona un mensaje valido</string>
    <string name="introducir_remarks">Introducir remarks</string>
    <string name="error_conexion">Error Revisa tu conexion!</string>
    <string name="fecha_de_revision">Fecha de revision:</string>
    <string name="titulo_lista_equipo_duario_pendiente_tab">Lista de Checks de Equipo diario Pendientes por subir</string>
    <string name="buscando_empleado">Buscando empleado</string>
    <string name="equipo">Equipo: </string>
    <string name="consultar">Consultar</string>
    <string name="compartimentos_de_carga">Compartimentos de carga</string>
    <string name="alojamientos_que_no_estan_sellados">2. Alojamientos que no están sellados</string>
    <string name="bolsa_dearpel_y_de_comail_comat">3. Bolsa de ARPEL y de COMAIL/COMAT</string>
    <string name="f_areas_externas">Áreas externas</string>
    <string name="fosos_del_tren_de_aterrisaje_de_nariz_y_nprincipal">1. Fosos del tren de aterrizaje de nariz y principal</string>
    <string name="siguiente">Siguiente</string>
    <string name="no_economico">No. económico</string>
    <string name="presenta_danios">¿Presenta daños?</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="inspec_aeronave_foto_mandatoria">* La foto de evidencia es mandatoria para este elemento.</string>
    <string name="ver_foto">Ver foto</string>
    <string name="introduce_una_cantidad">Introduce una cantidad</string>
</resources>