<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inspeccionEquipo.view.EscaneoCredencialesFragment">


    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_4">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_1"
                android:text="@string/lectura_de_credenciales"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!--Equipo Start-->
            <TextView
                android:id="@+id/textView222"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:text="@string/Equipment"
                android:textSize="@dimen/text_17"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:text="@string/escanea_c_digo_qr_del_equipo"
                android:textSize="@dimen/text_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView222" />

            <LinearLayout
                android:id="@+id/btn_rescan_equipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_45"
                android:background="@drawable/background_rectangulo"
                android:orientation="vertical"
                android:padding="@dimen/dimen_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView333">

                <EditText
                    android:id="@+id/txt_codigo_equipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_economico"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textSize="@dimen/text_14" />

                <TextView
                    android:id="@+id/txt_no_equipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_de_empleado"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_equipo_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_del_recurso_autom_tico"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

            <ImageView
                android:id="@+id/btn_scann_equipo"
                android:layout_width="@dimen/dimen_45"
                android:layout_height="@dimen/dimen_45"
                android:layout_marginTop="@dimen/dimen_19"
                android:src="@drawable/scan_qr"
                app:layout_constraintStart_toEndOf="@+id/btn_rescan_equipo"
                app:layout_constraintTop_toTopOf="@+id/textView333" />
            <!--Equipo End-->

            <include
                android:layout_marginTop="@dimen/dimen_8"
                android:id="@+id/datos_operador"
                layout="@layout/item_datos_empleado_firma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_rescan_equipo" />

            <include
                android:id="@+id/datos_supervisor"
                layout="@layout/item_datos_empleado_firma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/datos_operador" />

            <TextView
                android:layout_marginTop="@dimen/text_10"
                android:id="@+id/btn_regresar"
                android:layout_width="@dimen/dimen_150"
                android:layout_height="@dimen/dimen_40"
                android:background="@drawable/background_gris_cuadrado_esquinasredondas"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dimen_8"
                android:text="@string/regresar"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datos_supervisor" />

            <TextView
                android:layout_marginTop="@dimen/text_10"
                android:id="@+id/btn_continuar"
                android:layout_width="@dimen/dimen_150"
                android:layout_height="@dimen/dimen_40"
                android:background="@drawable/background_azul_cuadrado_esquinasredondas"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dimen_8"
                android:text="@string/siguiente"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datos_supervisor" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>